--- a/app/src/main/res/layout/fragment_note_add.xml
+++ b/app/src/main/res/layout/fragment_note_add.xml
@@ -1,65 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:transitionName="shared_transition"
+    tools:context=".frag.NoteAddFragment">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <include
+        android:id="@+id/layout_toolbar"
+        layout="@layout/layout_noteadd_tool_bar" />
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".frag.add.NoteAddFragment">
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_back">
 
-        <include
-            android:id="@+id/layout_toolbar"
-            layout="@layout/layout_noteadd_tool_bar" />
-
-        <androidx.core.widget.NestedScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_back">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/lbl_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="10dp">
+                android:padding="10dp"
+                android:text="@string/sample_date"
+                android:textColor="?attr/colorSecondary" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:text="@string/sample_date"
-                    android:padding="10dp"
-                    android:textColor="?attr/colorOnSurface"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/et_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:hint="@string/title"
+                android:inputType="text"
+                android:maxLines="1"
+                android:padding="10dp"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
-                <EditText
-                    android:id="@+id/et_title"
-                    android:hint="@string/title"
-                    android:background="@null"
-                    android:padding="10dp"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/et_note"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:gravity="start"
+                android:hint="@string/note"
+                android:inputType="textMultiLine"
+                android:padding="10dp"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
-                <EditText
-                    android:id="@+id/et_note"
-                    android:hint="@string/note"
-                    android:background="@null"
-                    android:gravity="start"
-                    android:padding="10dp"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                    android:inputType="textMultiLine"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+        </LinearLayout>
 
-            </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
-        </androidx.core.widget.NestedScrollView>
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
