--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/noteListFragment">
+    app:startDestination="@id/signInFragment">
+
+    <action
+        android:id="@+id/action_sign_out"
+        app:destination="@id/signInFragment"
+        app:popUpTo="@id/nav_graph"
+        app:popUpToInclusive="true"/>
+
+    <fragment
+        android:id="@+id/signInFragment"
+        android:name="com.thuraaung.notes.frag.SignInFragment"
+        android:label="fragment_splash"
+
+        tools:layout="@layout/fragment_sign_in">
+
+        <action
+            android:id="@+id/action_sign_in_to_noteList"
+            app:destination="@id/noteListFragment"
+            app:popUpTo="@id/signInFragment"
+            app:popUpToInclusive="true" />
+
+    </fragment>
 
     <fragment
         android:id="@+id/noteListFragment"
-        android:name="com.thuraaung.notes.frag.list.NoteListFragment"
+        android:name="com.thuraaung.notes.frag.NoteListFragment"
         android:label="fragment_note_list"
         tools:layout="@layout/fragment_note_list">
+
+        <action
+            android:id="@+id/action_noteList_to_searchNote"
+            app:destination="@id/searchNoteFragment" />
+
 
         <action
             android:id="@+id/action_noteList_to_noteAdd"
@@ -17,50 +43,31 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
-
-        <action
-            android:id="@+id/action_noteList_to_searchNote"
-            app:destination="@id/searchNoteFragment" />
-
-        <action
-            android:id="@+id/action_noteList_to_editNote"
-            app:destination="@id/editNoteFragment" />
-
-        <action
-            android:id="@+id/action_noteListFragment_to_noteAddFragment"
-            app:destination="@id/noteAddFragment" />
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
     </fragment>
     <fragment
         android:id="@+id/noteAddFragment"
-        android:name="com.thuraaung.notes.frag.add.NoteAddFragment"
+        android:name="com.thuraaung.notes.frag.NoteAddFragment"
         android:label="fragment_note_add"
-        tools:layout="@layout/fragment_note_add" >
+        tools:layout="@layout/fragment_note_add">
+
         <argument
             android:name="note"
+            android:defaultValue="@null"
             app:argType="com.thuraaung.notes.model.NoteModel"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
+
     </fragment>
 
     <dialog
         android:id="@+id/searchNoteFragment"
-        android:name="com.thuraaung.notes.frag.search.SearchNoteFragment"
+        android:name="com.thuraaung.notes.frag.SearchNoteFragment"
         android:label="fragment_search_note"
-        tools:layout="@layout/fragment_search_note" >
+        tools:layout="@layout/fragment_search_note">
         <action
-            android:id="@+id/action_searchNoteFragment_to_noteAddFragment"
+            android:id="@+id/action_searchNote_to_noteAdd"
             app:destination="@id/noteAddFragment" />
     </dialog>
 
-    <fragment
-        android:id="@+id/editNoteFragment"
-        android:name="com.thuraaung.notes.frag.edit.EditNoteFragment"
-        android:label="fragment_edit_note"
-        tools:layout="@layout/fragment_edit_note" >
-        <argument
-            android:name="note"
-            app:argType="com.thuraaung.notes.model.NoteModel" />
-    </fragment>
 </navigation>
