change card view style

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,7 @@
 <!--        <item name="statusBarBackground">?attr/colorOnSurface</item>-->
         <item name="android:windowLightStatusBar">@bool/isLightStatusBar</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.App.MediumComponent</item>
         <item name="fontFamily">sans-serif-medium</item>
 
     </style>
