--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     <style name="MaterialAlertDialog.App.Title.Text"
         parent="MaterialAlertDialog.MaterialComponents.Title.Text">
         <item name="android:textSize">20sp</item>
-                <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 
     <style name="MaterialAlertDialog.App.Body.Text"
@@ -48,6 +48,14 @@
         <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:textAllCaps">false</item>
         <item name="backgroundTint">?attr/colorError</item>
+    </style>
+
+    <style name="Widget.App.NoteCard" parent="Widget.MaterialComponents.CardView">
+
+        <item name="shapeAppearance">?attr/shapeAppearanceMediumComponent</item>
+        <item name="cardElevation">4dp</item>
+        <item name="android:layout_margin">8dp</item>
+
     </style>
 
 </resources>
