add some text styles

--- a/app/src/main/res/layout/fragment_profile_dialog.xml
+++ b/app/src/main/res/layout/fragment_profile_dialog.xml
@@ -7,7 +7,7 @@
     tools:context=".frag.ProfileDialogFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="500dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
