--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorPrimaryVariant">#ffffff</color>
     <color name="colorSecondary">#3f51b5</color>
     <color name="colorOnSecondary">#fafafa</color>
+    <color name="colorSecondaryVariant">#f5f5f5</color>
 
     <color name="colorSurface">#263238</color>
     <color name="colorOnSurface">#000000</color>
